--- a/projects/FileExplorer/fileexplorer.html
+++ b/projects/FileExplorer/fileexplorer.html
@@ -19,7 +19,7 @@
 				<p id="prompt-message">Click here<br> to find out!</p>
 			</div>
 			<div id="button-image" class="text-center center">
-				<a><img onclick="working()" style="float:center" id="front" src="Images/fileexplorericon2.jpg"/></a>
+				<a><img onclick="working()" style="float:center" id="front" src="Images/fileexplorericon2.jpg"></a>
 			</div>
 		</div>
 		<div class="container" id="result">
