--- a/projects/WordCounter/index.html
+++ b/projects/WordCounter/index.html
@@ -5,10 +5,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	  	<link rel="stylesheet" href="../../stylesheets/bootstrap.css">
-	  	<script src="../../javascript/jquery-3.0.0.min.js"></script>
+	  	<script src="../../javascript/jquery-2.1.4.js"></script>
 	  	<script src="../../javascript/bootstrap.min.js"></script>
-	  	<link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon">
-	  	<link rel="icon" href="../../favicon.ico" type="image/x-icon">
 
 	  	<link href='https://fonts.googleapis.com/css?family=Fredoka+One' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Anonymous+Pro:700' rel='stylesheet' type='text/css'>
