--- a/projects/WordCounter/index.html
+++ b/projects/WordCounter/index.html
@@ -74,7 +74,7 @@
 		<footer class="container-fluid text-center" id="footerword">
 			<p class="footertext">&copy; JamesAC42 2016</p><br>
 		</footer>
-		
+		<script>colorSchemeToggle()</script>
 	</body>
 </html>
 
