--- a/projects/Musicer/index.html
+++ b/projects/Musicer/index.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
+<html>
 <head>
 	<meta charset="utf-8">
-	<title>SheetMusicMaker</title>
-	<link rel="stylesheet" href="Javascript/jquery-ui-1.11.4/jquery-ui.min.css">
-	<script src="Javascript/jquery-ui-1.11.4/external/jquery/jquery.js"></script>
-	<script src="Javascript/jquery-ui-1.11.4/jquery-ui.min.js"></script>
+	<title>Musicer</title>
+	<script src="../../javascript/jquery-2.1.4.js"></script>
+	<script src="../../javascript/angular.js"></script>
+	<script src="javascript/angmusic.js"></script>
+	<link rel="stylesheet" href="../../jquery-ui-1.11.4/jquery-ui.css" type="text/css"/>
+	<script src="../../jquery-ui-1.11.4/jquery-ui.js"></script>
 	<script src="javascript/smm.js"></script>
-	<link href="smm.css" rel="stylesheet" type="text/css"/>
+	<link rel="stylesheet" href="stylesheets/smm.css" type="text/css"/>
 </head>
-<body>
-	<div id="div1"></div>
+<body ng-app="musicer">
+	<div id="notebar" ng-controller="notemenu">
+		<div class="fixed">
+			<div class="noterow" ng-repeat="row in ttoolsmenu">
+				<div class="note-item note-item-1">
+						<img ng-src="images/{{ttype}}/{{iisdot + row[0].name + ttype}}.jpg" class="menuimage menuimage1">
+				</div>
+				<div class="note-item note-item-2">
+						<img ng-src="images/{{ttype}}/{{iisdot + row[1].name + ttype}}.jpg" class="menuimage menuimage2">
+				</div>
+			</div>
+			<div class="noterow">
+				<div class="note-item note-item-1">
+					<img ng-click="toggledotted()" class="menuimage menuimage1" src="images/dot.jpg">
+				</div>
+				<div class="note-item note-item-2">
+					<img ng-click="toggletype()" class="menuimage menuimage2" src="images/rest.jpg">
+				</div>
+			</div>
+		</div>
+	</div>
+	<div id="right">
+		<div class="fixed">     
+		</div>
+	</div>
 </body>
+</html>
+
+
+
+
+
+
+
