--- a/javascript/index.html
+++ b/javascript/index.html
@@ -4,8 +4,8 @@
 	<link type="text/css" rel="stylesheet" href="stylesheets/bootstrap.css"/>
 	<link href='https://fonts.googleapis.com/css?family=Righteous' rel='stylesheet' type='text/css'>
 	<link type="text/css" rel="stylesheet" href="stylesheets/index.css"/>
-	<script type="text/javascript" src="js/jquery-3.0.0.min.js"></script>
-	<script type="text/javascript" src="js/movement.js"></script>
+	<script type="text/javascript" src="javascript/jquery-3.0.0.min.js"></script>
+	<script type="text/javascript" src="javascript/movement.js"></script>
 </head>
 <body>
 	<div class="container-fluid">
