--- a/testing/textareainsert.html
+++ b/testing/textareainsert.html
@@ -1,37 +1,79 @@
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Ubuntu|Ubuntu+Mono" rel="stylesheet">
+<script src="wordcount.js"></script>
 <title>textinsert</title>
 <meta charset="utf-8">
 <meta author="jamesac">
 <style>
 	body {
-		font-family:sans-serif;
+		font-family:'Ubuntu',sans-serif;
 	}
-	#counter-wrapper{
+	.sidebar-wrapper{
 		position:absolute;
 		margin-left:-15px;
 		height:100vh;
 		margin-top:-30px;
+		background-color: rgba(255,255,255,0.0);
 	}
-	#counter-window{
+	#info-wrapper{
+		pointer-events:none;
+	}
+	.sidebar-window{
 		height:100%;
-		width:45vw;
-		background-color: #EEEEEE;
+		width:50vw;
+		background-color: #FFFFFF;
 		float:left;
 	}
-	.counter-tab {
-		height:100px;
-		width:50px;
+	#info-window{
+		pointer-events:all;
+	}
+	.sidebar-tab {
+		height:50px;
+		width:100px;
+		text-align:center;
 		background-color: #DDDDDD;
 		border-top: 1px solid gray;
 		border-right:1px solid gray;
-		margin-top:70%;
 		float:left;
+		line-height:50px;
+		user-select:none;
+	}
+	#counter-tab{
+		margin-top:35vh;
+	}
+	#info-tab{
+		margin-top:50vh;
+		pointer-events:all;
 	}
 	.container{
 		width:80%;
 		margin:0 auto;
 		margin-top:30px;
+	}
+	.window-container{
+		height:90%;
+		width:90%;
+		margin:0 auto;
+		padding:10px;
+		padding-top:30px;
+	}
+	.sidebar-head{
+		font-size:23px;
+	}
+	#stat-div{
+		width:90%;
+		height:85%;
+		margin:0 auto;
+		margin-top:30px;
+		padding:15px;
+		overflow-y:scroll;
+		border:1px solid black;
+		background-color:#fbfbfb;
+	}
+	#stat {
+		font-family: 'Ubuntu Mono', sans-serif;
+		font-size:15px;
 	}
 	ul {
 		list-style-type:none;
@@ -49,6 +91,7 @@
 		text-decoration:none;
 		color:black;
 		background-color:#EEEEEE;
+		user-select: none;
 	}
 	li a:hover, .dropdown:hover .dropbtn{
 		background-color:gray;
@@ -88,6 +131,8 @@
 		display:block;
 	}
 	#text_area{
+		font-family:'Ubuntu Mono',monospace;
+		font-size:16px;
 		width:100%;
 		height:75%;
 		resize:none;
@@ -96,13 +141,25 @@
 </style>
 </head>
 <body>
-<div id="counter-wrapper">
-	<div id="counter-window">
-		<span id="counter-header">Word Counter</span>
+<div class="sidebar-wrapper" id="counter-wrapper">
+	<div class="sidebar-window" id="counter-window">
+		<div class="window-container">
+			<span class="sidebar-head" id="counter-head">Word Count</span><br>
+			<div id="stat-div">
+				<span id="stat"></span>
+			</div>
+		</div>
 	</div>
-	<div class="counter-tab"></div>	
+	<div class="sidebar-tab" id="counter-tab">0</div>	
 </div>
-
+<div class="sidebar-wrapper" id="info-wrapper"><!--none-->
+	<div class="sidebar-window" id="info-window"><!--default-->
+		<div class="window-container">
+			<span class="sidebar-head" id="info-head">Info</span>
+		</div>
+	</div>
+	<div class="sidebar-tab" id="info-tab">Submit</div><!--default-->
+</div>
 <div class="container">
 	<h1>Create</h1><hr>
 	<div id="navbar">
@@ -160,7 +217,6 @@
 	});
 	$(document).ready(function(){
 		
-		
 		$(".header-insert").hide();
 		/*
 						$("#headers-toggle").mouseover(function(){
@@ -188,9 +244,39 @@
 			}
 		});
 		
-		$("#counter-window").animate({width:'toggle'},350);
-		$(".counter-tab").click(function(){
-			$("#counter-window").animate({width:'toggle'},350);
+		var sidebar_out = false;
+		function toggleSidebar(){
+			if(!sidebar_out){
+				$("body").css({"background-color":"#e8e8e8"});
+				$("#text_area").css({"background-color":"#e8e8e8"});
+				$("li a").css({"background-color":"#d1d1d1"});
+				$(".sidebar-tab").css({"background-color":"#ffffff"});
+				sidebar_out = true;
+			}else{
+				$("body").css({"background-color":"#ffffff"});
+				$("#text_area").css({"background-color":"#ffffff"});
+				$("li a").css({"background-color":"#eeeeee"});
+				$(".sidebar-tab").css({"background-color":"#dddddd"});
+				sidebar_out = false;
+			}
+			console.log('test');
+		}
+		
+		$(".sidebar-window").each(function() {
+			$(this).animate({width:'toggle'},50);
+		});
+		$("#counter-tab").click(function(){
+			$(this).parent().find(".sidebar-window").animate({width:'toggle'},200);
+			$("#info-tab").animate({opacity: 'toggle'},60);
+			toggleSidebar();
+		});
+		$("#info-tab").click(function(){
+			$(this).parent().find(".sidebar-window").animate({width:'toggle'},200);
+			toggleSidebar();
+		});
+		
+		$("#text_area").keyup(function(){
+			countAll();
 		});
 	})
 </script>
