--- a/testing/textareainsert.html
+++ b/testing/textareainsert.html
@@ -339,9 +339,9 @@
 		var sidebar_out = false;
 		function toggleSidebar(){
 			if(!sidebar_out){
-				$("body").css({"background-color":"#e8e8e8"});
-				$("#text_area").css({"background-color":"#e8e8e8"});
-				$("li a").css({"background-color":"#d1d1d1"});
+				$("body").css({"background-color":"#dbdbdb"});
+				$("#text_area").css({"background-color":"#dbdbdb"});
+				$("li a").css({"background-color":"#adadad"});
 				$(".sidebar-tab").css({"background-color":"#ffffff"});
 				$(".pointer-end-tab").css({"border-left":"20px solid #ffffff"});
 				sidebar_out = true;
