Add shadow effect

--- a/testing/textareainsert.html
+++ b/testing/textareainsert.html
@@ -25,6 +25,8 @@
 		background-color: #FFFFFF;
 		float:left;
 		overyflow-y:scroll;
+		
+		box-shadow: 10px 10px 5px #8e8e8e;
 	}
 	.sidebar-window::-webkit-scrollbar { 
 		display: none; 
