--- a/testing/textareainsert.html
+++ b/testing/textareainsert.html
@@ -397,12 +397,12 @@
 		});
 		
 		$("#counter-tab").click(function(){
-			$(this).parent().find(".sidebar-window").animate({width:'toggle'},200).animate({width:'+=60px'},60).animate({width:'-=60px'},60).animate({width:'+=40px'},40).animate({width:'-=40px'},40);
+			$(this).parent().find(".sidebar-window").animate({width:'toggle'},200).animate({width:'-=40px'},80).animate({width:'+=40px'},60).animate({width:'-=20px'},40).animate({width:'+=20px'},10);
 			$("#info-tab").animate({opacity: 'toggle'},60);
 			toggleSidebar();
 		});
 		$("#info-tab").click(function(){
-			$(this).parent().find(".sidebar-window").animate({width:'toggle'},200).animate({width:'+=60px'},60).animate({width:'-=60px'},60).animate({width:'+=40px'},40).animate({width:'-=40px'},40);
+			$(this).parent().find(".sidebar-window").animate({width:'toggle'},200).animate({width:'-=40px'},80).animate({width:'+=40px'},60).animate({width:'-=20px'},40).animate({width:'+=20px'},10);
 			toggleSidebar();
 		});
 		
