organize file structure

--- a/testing/noteside/textareainsert.html
+++ b/testing/noteside/textareainsert.html
@@ -6,257 +6,7 @@
 <title>textinsert</title>
 <meta charset="utf-8">
 <meta author="jamesac">
-<style>
-	body {
-		font-family:'Ubuntu',sans-serif;
-	}
-	.sidebar-wrapper{
-		position:absolute;
-		margin-left:-15px;
-		height:100vh;
-		margin-top:-30px;
-		background-color: rgba(255,255,255,0.0);
-	}
-	#info-wrapper{
-		pointer-events:none;
-	}
-	.sidebar-window{
-		height:100%;
-		width:40vw;
-		background-color: #FFFFFF;
-		float:left;
-		overyflow-y:scroll;
-		
-		box-shadow: 10px 10px 5px #8e8e8e;
-	}
-	.sidebar-window::-webkit-scrollbar { 
-		display: none; 
-	}
-	#info-window{
-		pointer-events:all;
-	}
-	.sidebar-tab {
-		height:50px;
-		width:100px;
-		text-align:center;
-		background-color: #DDDDDD;
-		float:left;
-		line-height:50px;
-		user-select:none;
-	}
-	.pointer-end-tab{
-		width:0;
-		height:0;
-		border-top: 25px solid transparent;
-		border-bottom: 25px solid transparent;
-		float:left;
-		border-left: 20px solid #DDDDDD;
-	}
-	#counter-pointer{
-		margin-top:35vh;
-	}
-	#info-pointer{
-		margin-top:50vh;
-	}
-	#counter-tab{
-		margin-top:35vh;
-	}
-	#info-tab{
-		margin-top:50vh;
-		pointer-events:all;
-	}
-	.container{
-		width:80%;
-		margin:0 auto;
-		margin-top:30px;
-	}
-	.window-container{
-		height:90%;
-		width:90%;
-		margin:0 auto;
-		padding:15px;
-		padding-top:30px;
-		overflow-y:scroll;
-	}
-	.window-container::-webkit-scrollbar { 
-		display: none; 
-	}
-	.header-div{
-		width:100%;
-		text-align:center;
-	}
-	.sidebar-head{
-		font-size:23px;
-	}
-	#stat-div{
-		width:90%;
-		height:85%;
-		margin:0 auto;
-		margin-top:30px;
-		padding:15px;
-		overflow-y:scroll;
-		overflow-x:scroll;
-		border:1px solid black;
-		background-color:#fbfbfb;
-	}
-	#stat {
-		font-family: 'Ubuntu Mono', sans-serif;
-		font-size:15px;
-		white-space:pre;
-	}
-	.window-inner-div{
-		width:90%;
-		margin:0 auto;
-		padding: 15px;
-		margin-top:30px;
-	}
-	#form-submit-div{
-		margin-bottom:40px;
-		border-bottom:1px solid gray;
-	}
-	#settings-div{
-		height:900px;
-	}
-	.settings-label{
-		float:left;
-	}
-	.row{
-		width:100%;
-		height:70px;
-	}
-	.col{
-		margin:-1px;
-		width:50%;
-		float:left;
-	}
-	.col input, label,select{
-		display:block;
-		font-size:18px;
-		font-family:'Ubuntu',sans-serif;
-		margin:0 auto;
-	}
-	.col label{
-		padding-left:10px;
-	}
-	.col input, select{
-		width:95%;
-		line-height:40px;
-		height:40px;
-	}
-	input{
-		padding:10px 10px;
-	}
-	.btn{
-		height:40px;
-		width:80px;
-		font-size:20px;
-		margin-top:10px;
-		border:none;
-		font-family:'Ubuntu',sans-serif;
-		background-color: #e7e7e7;
-	}
-	.btn:hover{
-		background-color: #cccccc;
-	}
-	#submit-button{
-		float:right;
-		margin-right:10px;
-	}
-	#save-button{
-		float:left;
-		margin-left:10px;
-	}
-	#fontfamily-setting-div{
-		width:80%;
-	}
-	#fontsize-setting-div{
-		width:20%;
-	}
-	#ubuntu-mono-option{
-		font-family: "Ubuntu Mono";
-	}
-	#dosis-option{
-		font-family: "Dosis";
-	}
-	#eczar-option{
-		font-family:"Eczar";
-	}
-	#sharetech-option{
-		font-family:"Share Tech Mono";
-	}
-	.font-setting-select{
-		height:40px;
-	}
-	#fontfamily-select option{
-		height:40px;
-	}
-	ul {
-		list-style-type:none;
-		padding:0;
-		margin:0;
-	}
-	li{
-		float:left;
-		border:1px solid black;
-		display:inline-block;
-	}
-	li a, .dropbtn{
-		display:inline-block;
-		text-align:center;
-		padding:14px 16px;
-		text-decoration:none;
-		color:black;
-		background-color:#EEEEEE;
-		user-select: none;
-	}
-	li a:hover, .dropdown:hover .dropbtn{
-		background-color:#cccccc;
-	}
-	li.dropdown{
-		display:inline-block;
-	}
-	.dropdown-content{
-		display:none;
-		position:absolute;
-		background-color:#f1f1f1;
-		min-width:120px;
-		box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-	}
-	
-	#header-content{
-		border:none;
-		padding-bottom:-5px;
-	}
-	
-	#headers-div{
-		height:50px;
-		margin-bottom:1px;
-		white-space:nowrap;
-	}
-	
-	.dropdown-content a{
-		color:black;
-		text-decoration:none;
-		padding:12px 16px;
-		display:block;
-		text-align:left
-	}
-	.dropdown-content a:hover{
-		background-color:#f1f178;
-	}
-	.dropdown:hover .dropdown-content{
-		display:block;
-	}
-	#text_area{
-		font-family:'Ubuntu Mono',monospace;
-		font-size:16px;
-		width:100%;
-		height:75%;
-		resize:none;
-		margin-top:-5px;
-		padding:20px;
-	}
-</style>
+<link href="textarea.css" rel="stylesheet">
 </head>
 <body>
 <div class="sidebar-wrapper" id="counter-wrapper">
@@ -387,117 +137,5 @@
 	<textarea name="note-editor" id="text_area" form="submit-note"></textarea>
 	
 </div>
-<script>
-	function insertForm(markdown){
-		var $txt = jQuery("#text_area");
-        var caretPos = $txt[0].selectionStart;
-        var textAreaTxt = $txt.val();
-        var txtToAdd = markdown;
-        $txt.val(textAreaTxt.substring(0, caretPos) + txtToAdd + textAreaTxt.substring(caretPos) );
-	}
-	function insertLink(){
-		var url = prompt("URL (https://...)");
-		var hypertext = prompt("Hyperlink");
-		insertForm(" [" + hypertext + "](" + url + ") ");
-	}
-	$("#text_area").keydown(function(e) {
-		if(e.keyCode === 9) { // tab was pressed
-			// get caret position/selection
-			var start = this.selectionStart;
-				end = this.selectionEnd;
-
-			var $this = $(this);
-
-			// set textarea value to: text before caret + tab + text after caret
-			$this.val($this.val().substring(0, start)
-						+ "\t"
-						+ $this.val().substring(end));
-
-			// put caret at right position again
-			this.selectionStart = this.selectionEnd = start + 1;
-
-			// prevent the focus lose
-			return false;
-		}
-	});
-	$(document).ready(function(){
-		/*
-		$(".header-insert").hide();
-		$("#headers-toggle, .header-insert").mouseenter(function(){
-			$( ".header-insert" ).first().show(150, function showNext() {
-				$( this ).next( ".header-insert" ).show(150, showNext );
-			});
-		})
-		
-		$("#headers-toggle, .header-insert").mouseleave( function() {
-			if ($('.header-insert:hover').length == 0) {
-				$( ".header-insert" ).first().hide(150, function showNext() {
-					$( this ).next( ".header-insert" ).hide(150, showNext );
-				});
-			}
-		});
-		*/
-		var sidebar_out = false;
-		function toggleSidebar(){
-			if(!sidebar_out){
-				$("body").css({"background-color":"#dbdbdb"});
-				$("#text_area").css({"background-color":"#dbdbdb"});
-				$("li a").css({"background-color":"#adadad"});
-				$(".sidebar-tab").css({"background-color":"#ffffff"});
-				$(".pointer-end-tab").css({"border-left":"20px solid #ffffff"});
-				sidebar_out = true;
-			}else{
-				$("body").css({"background-color":"#ffffff"});
-				$("#text_area").css({"background-color":"#ffffff"});
-				$("li a").css({"background-color":"#eeeeee"});
-				$(".sidebar-tab").css({"background-color":"#dddddd"});
-				$(".pointer-end-tab").css({"border-left":"20px solid #dddddd"});
-				sidebar_out = false;
-			}
-		}
-		
-		$(".header-insert").animate({width:'toggle'},50);
-		$("#header-outer-ctrl").mouseenter(function(){
-			$( ".header-insert" ).first().animate({width:'toggle'},150,function showNext() {
-				$( this ).next( ".header-insert" ).animate({width:'toggle'},150, showNext );
-			});
-		})
-		$("#header-outer-ctrl").mouseleave(function(){
-			$( ".header-insert" ).first().animate({width:'toggle'},150,function showNext() {
-				$( this ).next( ".header-insert" ).animate({width:'toggle'},150, showNext );
-			});
-		})
-		/*
-		$("#headers-div").mouseleave( function() {
-			if ($("#headers-toggle").length != 0) {
-				$("#headers-div").animate({width:'toggle'},300);
-			}
-		});*/
-		$(".sidebar-window").each(function() {
-			$(this).animate({width:'toggle'},50);
-		});
-		
-		$("#counter-tab").click(function(){
-			$(this).parent().find(".sidebar-window").animate({width:'toggle'},200).animate({width:'-=40px'},80).animate({width:'+=40px'},60).animate({width:'-=20px'},40).animate({width:'+=20px'},10);
-			$("#info-tab").animate({opacity: 'toggle'},60);
-			toggleSidebar();
-		});
-		$("#info-tab").click(function(){
-			$(this).parent().find(".sidebar-window").animate({width:'toggle'},200).animate({width:'-=40px'},80).animate({width:'+=40px'},60).animate({width:'-=20px'},40).animate({width:'+=20px'},10);
-			toggleSidebar();
-		});
-		
-		$("#fontfamily-select").change(function(){
-			$("#text_area").css({"font-family":$(this).val()});
-		});
-		
-		$("#fontsize-select").change(function(){
-			$("#text_area").css({"font-size":$(this).val()});
-		});
-		
-		$("#text_area").keyup(function(){
-			countAll();
-		});
-	})
-</script>
+<script src="textarea.js"></script>
 </body>
