less ugly color scheme

--- a/testing/noteside/textareainsert.html
+++ b/testing/noteside/textareainsert.html
@@ -13,20 +13,20 @@
 	<div class="sidebar-window" id="counter-window">
 		<div class="window-container">
 			<div class="header-div">
-				<span class="sidebar-head" id="counter-head">Word Count</span>
+				<span class="sidebar-head" id="counter-head"><strong>Word Count</strong></span>
 			</div>
 			<div id="stat-div">
 				<span id="stat">Type Something!</span>
 			</div>
 		</div>
 	</div>
-	<div class="sidebar-tab" id="counter-tab">0</div><div id="counter-pointer" class="pointer-end-tab"></div>	
+	<div class="sidebar-tab" id="counter-tab"><strong>0</strong></div><div id="counter-pointer" class="pointer-end-tab"></div>	
 </div>
 <div class="sidebar-wrapper" id="info-wrapper"><!--none-->
 	<div class="sidebar-window" id="info-window"><!--default-->
 		<div class="window-container">
 			<div class="header-div">
-				<span class="sidebar-head" id="info-head">Note Info</span>
+				<span class="sidebar-head" id="info-head"><strong>Note Info</strong></span>
 			</div>
 			<div class="window-inner-div" id="form-submit-div">
 				<form id="submit-note">
@@ -65,7 +65,7 @@
 				</form>
 			</div>
 			<div class="header-div">
-				<span class="sidebar-head" id="settings-head">Settings</span>
+				<span class="sidebar-head" id="settings-head"><strong>Settings</strong></span>
 				<div class="window-inner-div" id="settings-div">
 					<div class="row">
 						<div id="fontfamily-setting-div" class="col">
