Neater Word counter

--- a/testing/noteside/textareainsert.html
+++ b/testing/noteside/textareainsert.html
@@ -16,7 +16,8 @@
 				<span class="sidebar-head" id="counter-head"><strong>Word Count</strong></span>
 			</div>
 			<div id="stat-div">
-				<span id="stat">Type Something!</span>
+				<!--<span id="stat">Type Something!</span>-->
+				<div class="stat-entry"><span class="stat-entry-word">Word</span><span class="stat-entry-amt">0</span></div>
 			</div>
 		</div>
 	</div>
