Great looking word counter

--- a/testing/noteside/textareainsert.html
+++ b/testing/noteside/textareainsert.html
@@ -17,7 +17,7 @@
 			</div>
 			<div id="stat-div">
 				<!--<span id="stat">Type Something!</span>-->
-				<div class="stat-entry"><span class="stat-entry-word">Word</span><span class="stat-entry-amt">0</span></div>
+				<div class="stat-entry"><span class="no-text">Type Something! That's the idea!</span></div>
 			</div>
 		</div>
 	</div>
@@ -80,16 +80,16 @@
 						</div>
 						<div id="fontsize-setting-div" class="col">
 							<select id="fontsize-select" class="font-setting-select" name="fontsize">
-								<option value="8">8</option>
-								<option value="10">10</option>
-								<option value="12">12</option>
-								<option value="14">14</option>
 								<option value="16" select="selected">16</option>
 								<option value="18">18</option>
 								<option value="20">20</option>
 								<option value="22">22</option>
 								<option value="24">24</option>
 								<option value="26">26</option>
+								<option value="28">28</option>
+								<option value="30">30</option>
+								<option value="34">34</option>
+								<option value="56">56</option>
 							</select>	
 						</div>
 					</div>
