add autosave setting skeleton

--- a/testing/noteside/textareainsert.html
+++ b/testing/noteside/textareainsert.html
@@ -34,23 +34,23 @@
 					<div class="row">
 						<div class="col">
 							<label for="title-input">Title</label>
-							<input id="title-input" type="text"></input>
+							<input id="title-input" type="text" required></input>
 						</div>
 						<div class="col">
 							<label for="section-input">Chapter/ Section</label>
-							<input id="section-input" type="text">
+							<input id="section-input" type="text" required>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col">
 							<label for="class-input">Class</label>
-							<select id="class-input">
+							<select id="class-input" required>
 								<option value="class">Class</option>
 							</select>
 						</div>
 						<div class="col">
 							<label for="teacher-input">Teacher</label>
-							<select id="teacher-input">
+							<select id="teacher-input" required>
 								<option value="teacher">Teacher</option>
 							</select>
 						</div>
@@ -94,11 +94,11 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col">
-							
+						<div class="col setting-desc">
+							Auto Save
 						</div>
 						<div class="col">
-							
+							<button class="btn" id="auto-save-btn">On</button>
 						</div>
 					</div>
 				</div>
